LU-244 Cray portals compile fixes for Lustre 2.X

While moving the lustre client on cray sea star systems I ran it the
compile issues with the portals klnd driver. The reason being is the
lag of the driver to the api changes in the lnet layer. This patch
brings the lnet portals driver up to date.

Change-Id: I9e81cc11e25be7c5c548fdfd3cc7e596107fc0ef
Signed-off-by:James Simmons <uja.ornl@gmail.com>
Reviewed-on: http://review.whamcloud.com/469
Reviewed-by: Liang Zhen <liang@whamcloud.com>
Reviewed-by: Cory Spitz <spitzcor@cray.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Hudson